compiler/src/test/resources/golden/errors/sam_wrong_arity.dawn
use java "java.lang.Thread"

pub fn main() -> Unit !io = {
  let t = Thread.new(fn(x: Int) => x)
  t.start()
}
