compiler/src/test/resources/golden/errors/sam_wrong_arity.err
error: no constructor of `java.lang.Thread` matches (fn(Int) -> Int)
  --> sam_wrong_arity.dawn:4:11
  |
4 |   let t = Thread.new(fn(x: Int) => x)
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = hint: candidates:
  public java.lang.Thread()
  public java.lang.Thread(java.lang.Runnable)
  public java.lang.Thread(java.lang.Runnable,java.lang.String)
  public java.lang.Thread(java.lang.String)
  public java.lang.Thread(java.lang.ThreadGroup,java.lang.Runnable)
  public java.lang.Thread(java.lang.ThreadGroup,java.lang.Runnable,java.lang.String)
  public java.lang.Thread(java.lang.ThreadGroup,java.lang.Runnable,java.lang.String,long)
  public java.lang.Thread(java.lang.ThreadGroup,java.lang.Runnable,java.lang.String,long,boolean)
  public java.lang.Thread(java.lang.ThreadGroup,java.lang.String)
